tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match9.bal
import ballerina/java;

function decimalParamAsObjectAndReturn(decimal a1) returns decimal = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

